[package]
name = "rpi5_build_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.1.1", features = ["bson-chrono-0_4"] }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
dotenvy = "0.15.7"
chrono = "0.4.24"
